Fixes of buttons with the same responsibilities (#57)
* Init: deleted buttons with the same responsibilities

* Fixes due to comments

---------

Co-authored-by: alinashestakova <shestackova.ayu@edu.spbstu.ru>